add progress bar

--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
 
     <p id="titre">algae window</p>
 
+    <div id="progress"></div>
+
     <video id="videojs-vr-player" class="video-js vjs-default-skin vjs-big-play-centered" controls autoplay loop muted>
         <source src="./assets/test.mp4" type="video/mp4">
     </video>
