--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div id="progress"></div>
 
     <video id="videojs-vr-player" class="video-js vjs-default-skin vjs-big-play-centered" controls autoplay loop muted>
-        <source src="./assets/test.mp4" type="video/mp4">
+        <source src="./assets/algae360.mp4" type="video/mp4">
     </video>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.js"
