--- a/index.html
+++ b/index.html
@@ -9,41 +9,18 @@
     <link href="https://cdn.jsdelivr.net/npm/videojs-vr@1.7.1/dist/videojs-vr.css" rel="stylesheet">
     <link rel="stylesheet" href="stylesheet/main.css">
     <title>Algue</title>
-    <style>
-        @-webkit-keyframes pulse {
-               0% {
-                   opacity: 1;
-               }
-               50% {
-                   opacity: 0.5;
-               }
-               100% {
-                   opacity: 1;
-               }
-           }
-
-    @keyframes pulse {
-        0% {
-            opacity: 1;
-        }
-        50% {
-            opacity: 0.5;
-        }
-        100% {
-            opacity: 1;
-        }
-    }
-    </style>
 </head>
 
 <body>
 
     <nav>
-        <h2>Olafur Eliasson X Art of Change 21</h2>
+        <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="46" viewBox="0 0 24 46">
+            <text id="Ø" transform="translate(12 32)" fill="#fff" font-size="30" font-family="STIXGeneral-Bold, STIXGeneral" font-weight="700"><tspan x="-11.67" y="0">Ø</tspan></text>
+          </svg></a>
         <a href="https://artofchange21.com/en/home/" target="_blank"><img src="../assets/logo.png" alt="Logo Art of change"></a>
     </nav>
 
-    <div id="p5_loading" style="height: 100vh; width: 100%; background-color: #000000; display:flex;">
+    <div id="p5_loading" style="position:relative; height: 100vh; width: 100%; background-color: #000000; display:flex; z-index: 555555;">
         <div style="margin:auto; color: #FFFFFF; font-family: Helvetica, sans-serif;
         animation: pulse 3s infinite ease-in-out;">
             LOADING...
@@ -54,7 +31,9 @@
         <div class="phone-message">Cette expérience n'est pas disponible sur mobile.</div>
     </div>
 
-    <p id="titre">algae window</p>
+    <p id="titre">algae windØw</p>
+
+    <a href="#" id="retourCarte"><img src="./assets/retour-carte.png" alt=""></a>
 
     <video id="videojs-vr-player" class="video-js vjs-default-skin vjs-big-play-centered" controls autoplay loop muted>
         <source src="./assets/test.mp4" type="video/mp4">
