--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="phone-message">Cette expérience n'est pas disponible sur mobile.</div>
     </div>
 
-    <p id="titre">algae windØw</p>
+    <p id="titre">Algae Windøw, 2020</p>
 
     <a href="#" id="retourCarte"><img src="./assets/retour-carte.png" alt=""></a>
 
