--- a/ice-watch/index.html
+++ b/ice-watch/index.html
@@ -51,9 +51,28 @@
         </div>
     </div>
 
-    <!-- <video id="videojs-vr-player" class="video-js vjs-default-skin vjs-big-play-centered" controls autoplay loop muted>
-        <source src="./assets/algae360.mp4" type="video/mp4">
-    </video> -->
+    <section class="exp-ice">
+    <video autoplay loop muted>
+        <source src="./assets/ice-watch.mp4" type="video/mp4">
+    </video>
+    <div class="infos-container">
+        <div class="txt">
+            <p id="info" class='info'>In the Arctic, the area covered
+                by the ice decreases by approximately
+                13% per decade for 40 years.</p>
+            <p id="info" class='info'>The increase in temperature
+                air is responsible for melting ice.
+                Especially at the poles, the air heats up
+                faster than elsewhere, partly because
+                of the high concentration of greenhouse gases.</p>
+            <p id="info" class='info'>The melting ice is the main
+                cause of rising waters. Since 1901,
+                the sea level has risen by about 20 cm
+                and the pace picks up.</p>
+        </div>
+        <img src="./assets/ice_berg.png" alt="" id="iceberg">
+    </div>
+</section>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.js"
         integrity="sha512-rMaqGbYalDaQz0lWNF2L8DHPtf4NW+gSZomExS0LcsNyRS4Rmj21+dt97XfXCZE/E569eX72Bh//Jt1EpStgiA=="
